Fix MozillaSuiteTest to find its resources